# ArcticFox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
ArcticFox/: CMakeLists.txt
ArcticFox/include/: Application.hpp  EntryPoint.hpp  Layer.hpp
ArcticFox/include/Input/: Input.hpp  KeyCodes.hpp
ArcticFox/include/Widgets/: imfilebrowser.h  toggle_button.h
ArcticFox/src/: Application.cpp  Input.cpp  toggle_button.cpp
example/: CMakeLists.txt  simple_app.cpp
example/node_editor_example/: CMakeLists.txt  basic_example.cpp  widgets_example.cpp
example/src/: main.cpp
scripts/: setup.bat
third_part/: CMakeLists.txt
third_part/imgui/: CMakeLists.txt
third_part/imgui_node_editor/: CMakeLists.txt  imgui_node_editor.cpp  imgui_node_editor_internal.h
